# nthlayer-respond

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.beads.archived/: metadata.json
prompts/: remediation.yaml
registry/: safe-actions.yaml
scenarios/synthetic/: autonomy-reduction.yaml  cascading-failure.yaml  crash-recovery.yaml  human-override.yaml  low-confidence-escalation.yaml  model-unavailable.yaml  remediation-approval.yaml  sitrep-unavailable.yaml
src/mayday/: __init__.py  __main__.py  config.py  context_store.py  coordinator.py  types.py
src/mayday.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/nthlayer_respond/: cli.py  config.py  context_store.py  coordinator.py  metrics.py  notifications.py  server.py  types.py
src/nthlayer_respond/agents/: base.py  communication.py  investigation.py  remediation.py  triage.py
src/nthlayer_respond/notification_backends/: __init__.py  ntfy_backend.py  protocol.py  slack_backend.py  stdout_backend.py
src/nthlayer_respond/oncall/: __init__.py  escalation.py  runner.py  schedule.py
src/nthlayer_respond/safe_actions/: actions.py  registry.py  webhook.py
src/nthlayer_respond/sre/: delegation.py  suppression.py
tests/: conftest.py  test_agent_base.py  test_cli_sre.py  test_communication.py  test_config.py  test_context_store.py  test_coordinator.py  test_coordinator_escalation.py  test_escalation.py  test_investigation.py  test_metrics.py  test_notification_backends.py  test_notification_protocol.py  test_notifications.py  test_remediation.py  test_replay.py  test_respond_command.py  test_runner.py  test_safe_actions.py  test_schedule.py  test_server.py  test_sre_delegation.py  test_sre_suppression.py  test_triage.py  test_types.py  test_webhook.py
