[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nthlayer-respond"
version = "0.3.0"
description = "Multi-agent incident response for the OpenSRM ecosystem"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "pyyaml>=6.0.1",
    "structlog>=24.1",
    "starlette>=0.40",
    "uvicorn>=0.30",
    "nthlayer-common",
    "nthlayer-learn",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
]

[project.scripts]
nthlayer-respond = "nthlayer_respond.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
nthlayer-learn = { path = "../nthlayer-learn/lib/python" }
nthlayer-common = { path = "../nthlayer-common" }
